# haeo

./: codecov.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
custom_components/haeo/: __init__.py  manifest.json  sensor_utils.py
custom_components/haeo/coordinator/: coordinator.py  network.py
custom_components/haeo/coordinator/tests/: test_coordinator.py  test_data_loading.py  test_network.py
custom_components/haeo/core/adapters/: output_utils.py  policy_compilation.py  shadow_price_utils.py
custom_components/haeo/core/adapters/elements/: battery.py  battery_section.py  grid.py  inverter.py  load.py  node.py  solar.py
custom_components/haeo/core/adapters/elements/tests/: test_battery.py  test_battery_model.py  test_battery_section_model.py  test_grid_model.py  test_inverter_model.py  test_load_model.py  test_load_stats.py  test_load_stats_lp.py  test_load_threshold_lp.py  test_multi_block_dual_lp.py  test_node_model.py  test_solar_model.py
custom_components/haeo/core/adapters/tests/: test_output_utils.py  test_policy_compilation.py  test_shadow_price_utils.py
custom_components/haeo/core/data/loader/: config_loader.py
custom_components/haeo/core/data/loader/extractors/: __init__.py  volcast.py
custom_components/haeo/core/data/loader/extractors/tests/test_data/sensors/: __init__.py  volcast.py
custom_components/haeo/core/model/: element.py  network.py  output_data.py  topology.py
custom_components/haeo/core/model/elements/: connection.py  policy_pricing.py
custom_components/haeo/core/model/elements/segments/: power_limit.py
custom_components/haeo/core/model/elements/segments/tests/: test_segments.py
custom_components/haeo/core/model/elements/tests/: test_connections.py
custom_components/haeo/core/model/reactive/tests/: test_warm_start.py
custom_components/haeo/core/model/tests/: test_network.py  test_period_updates.py  test_scenarios.py  test_topology.py
custom_components/haeo/core/model/tests/test_data/: connection.py
custom_components/haeo/core/schema/: entity_value.py  field_hints.py
custom_components/haeo/core/schema/elements/: battery.py  load.py
custom_components/haeo/core/schema/migrations/: v1_4.py
custom_components/haeo/core/schema/sections/: __init__.py  threshold.py
custom_components/haeo/elements/: __init__.py  field_hints.py
custom_components/haeo/elements/tests/: test_field_hints.py
custom_components/haeo/entities/: haeo_sensor.py
custom_components/haeo/flows/: surfaced_policy.py
custom_components/haeo/flows/elements/: battery.py  load.py  policy.py
custom_components/haeo/flows/tests/: test_surfaced_policy.py
custom_components/haeo/migrations/: __init__.py  v1_4.py
custom_components/haeo/migrations/tests/: test_v1_4.py
custom_components/haeo/sections/: __init__.py  threshold.py
custom_components/haeo/tests/: test_sensor_utils.py
custom_components/haeo/translations/: en.json
docs/developer-guide/: data-loading.md
docs/javascripts/: guide-slideshow.js
docs/modeling/: shadow-prices.md  shedding.md
docs/modeling/device-layer/: battery.md  battery_section.md  grid.md  inverter.md  loads.md  node.md  solar.md
docs/user-guide/: forecasts-and-sensors.md  optimization.md
docs/user-guide/elements/: battery.md  battery_section.md  grid.md  inverter.md  load.md  node.md  solar.md
docs/walkthroughs/: historic-diagnostics.md  index.md  power-policies.md  sigenergy-system.md
frontend/haeo-forecast-card/: .gitignore  package-lock.json  package.json  vitest.config.ts
frontend/haeo-forecast-card/scripts/: build.mjs  export-topology-svg.mjs
frontend/haeo-forecast-card/src/topology/: NetworkTopology.stories.tsx  NetworkTopology.tsx  index.ts  layout.ts  render-svg.ts  shared.ts  types.ts
tests/guides/: ha_runner.py
tests/guides/primitives/: __init__.py  developer_tools.py  ha_page.py
tests/scenarios/: test_scenarios.py
tests/scenarios/scenario1/: outputs.json
tests/scenarios/scenario2/: outputs.json
tests/scenarios/scenario3/: outputs.json
tests/scenarios/scenario4/: outputs.json
tests/scenarios/scenario5/: outputs.json
tests/scenarios/scenario6/: outputs.json
tests/scenarios/visualisation/: __init__.py  plot.py
tools/: guide_runner.py
