[project]
name = "haeo"
version = "0.4.0rc5"
description = "Home Assistant Energy Network Optimizer"
readme = "README.md"
requires-python = ">=3.13.2,<3.14"

dependencies = ["homeassistant>=2026.1.1", "numpy>=2.3.2", "highspy>=1.12.0"]

[project.scripts]
diag = "tools.diag:main"
snapshot = "tools.snapshot:main"

[dependency-groups]
dev = [
    "freezegun>=1.5.2",
    "home-assistant-frontend>=20260107.1",
    "playwright>=1.57.0",
    "tabulate>=0.9.0",
    "mdformat-beautysh>=1.0.0",
    "mdformat-config>=0.2.1",
    "mdformat-footnote>=0.1.1",
    "mdformat-frontmatter>=2.0.8",
    "mdformat-mkdocs>=4.4.2",
    "mdformat-myst>=0.2.2",
    "mdformat-pyproject>=0.0.2",
    "mdformat-ruff>=0.1.3",
    "mdformat-simple-breaks>=0.0.1",
    "mdformat-tables>=1.0.0",
    "mdformat>=0.7.22",
    "pyright>=1.1.408",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-homeassistant-custom-component>=0.13.300",
    "ruff>=0.14.10",
    "setuptools>=80.9.0",
    "syrupy>=5.0.0",
    "zensical>=0.0.30",
    "import-linter>=2.10",
    "pytest-benchmark>=5.2.3",
]

[tool.ruff]
required-version = ">=0.14.0"
line-length = 120
target-version = "py313"
exclude = ["custom_components/hacs"]

[tool.ruff.lint]
# Enable ALL rules and selectively ignore overly strict ones
select = ["ALL"]

# Ignore overly strict or unwanted rules
ignore = [
    'COM812',  # Formatter already deals with trailing commas
    'D202',    # Blank lines after docstring are fine
    'D203',    # Don't put a newline between the class and docstring (D211 is used instead)
    'D213',    # Multiline doc strings have an empty first line (Incompatible with D212)
    'PLR0913', # Parameter limits are a something for code review not linting
    'PLR0915', # Too many statements is something for code review not linting
    'PLR0912', # Too many branches is something for code review not linting
    'C901',    # Complexity is not a good linting rule, it should be a code review issue
    'TC001',   # Don't use TYPE_CHECKING blocks
    'TC002',   # Don't use TYPE_CHECKING blocks
    'TC003',   # Don't use TYPE_CHECKING blocks
    'BLE001',  # Do not catch blind exception - integration code needs to handle various exception types gracefully (127+ violations)
    'ANN401',  # Dynamically typed expressions - legitimate use of Any for **kwargs parameters
    'TRY300',  # Consider moving statement to else block - overly pedantic about code structure
    'TRY301',  # Abstract raise to inner function - overly pedantic, creates unnecessary indirection
    'PLR0911', # Too many return statements - something for code review not linting
]

[tool.ruff.lint.isort]
known-first-party = ["haeo"]
force-sort-within-sections = true
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]

"**/test_*.py" = [
    'S101',    # Assert is allowed in tests
    'B011',    # Assert false is allowed in tests
    'PT015',   # Assert that always fails is fine in a test
    'SLF001',  # Accessing private methods is ok in testing
    'ARG001',  # Unused function argument - test fixtures often provide unused parameters for setup
    'PLR2004', # Magic value used in comparison - test assertions often use simple numeric values
    'S110',    # Try-except-pass detected - test exception handling patterns differ from production code
    'SIM105',  # Use contextlib.suppress instead of try-except-pass - test exception handling patterns differ
    'BLE001',  # Do not catch blind exception - test code needs to handle various exception types
    'FBT001',  # Boolean positional argument - common in parametrized tests
    'FBT003',  # Boolean positional value - test assertions often pass literal booleans
]
"**/conftest.py" = [
    'S101',    # Assert is allowed in tests
    'B011',    # Assert false is allowed in tests
    'PT015',   # Assert that always fails is fine in a test
    'SLF001',  # Accessing private methods is ok in testing
    'ARG001',  # Unused function argument - test fixtures often provide unused parameters for setup
    'PLR2004', # Magic value used in comparison - test assertions often use simple numeric values
    'S110',    # Try-except-pass detected - test exception handling patterns differ from production code
    'SIM105',  # Use contextlib.suppress instead of try-except-pass - test exception handling patterns differ
    'BLE001',  # Do not catch blind exception - test code needs to handle various exception types
    'FBT001',  # Boolean positional argument - common in parametrized tests
    'FBT003',  # Boolean positional value - test assertions often pass literal booleans
]
"tests/**/*.py" = [
    'S101',    # Assert is allowed in tests
    'B011',    # Assert false is allowed in tests
    'PT015',   # Assert that always fails is fine in a test
    'SLF001',  # Accessing private methods is ok in testing
    'ARG001',  # Unused function argument - test fixtures often provide unused parameters for setup
    'PLR2004', # Magic value used in comparison - test assertions often use simple numeric values
    'S110',    # Try-except-pass detected - test exception handling patterns differ from production code
    'SIM105',  # Use contextlib.suppress instead of try-except-pass - test exception handling patterns differ
    'BLE001',  # Do not catch blind exception - test code needs to handle various exception types
    'FBT001',  # Boolean positional argument - common in parametrized tests
    'FBT003',  # Boolean positional value - test assertions often pass literal booleans
]

"stubs/**/*.pyi" = [
    'N',      # Naming conventions must match external API
    'D',      # Docstrings in stubs are optional
    'A',      # Shadowing builtins is fine for type stubs
    'PYI',    # Stub-specific rules - we're matching external API
    'I',      # Import order doesn't matter in stubs
    'PIE790', # Allow ... in stub classes
]

"tools/**/*.py" = [
    'T201',   # Allow print statements in CLI tools
    'FBT001', # Boolean positional argument - required by import-linter Contract interface
]


[tool.pyright]
# Type checking configuration with maximum strictness
pythonVersion = "3.13"
typeCheckingMode = "strict"
stubPath = "stubs"
include = ["tests", "custom_components", "tools"]
exclude = ["custom_components/hacs", "**/node_modules"]
extraPaths = ["."]

# Disable errors that propagate from third-party incomplete types
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownParameterType = false

# Disable missing stubs warning
reportMissingTypeStubs = false

reportPrivateUsage = false

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-statements = 60

[tool.pytest.ini_options]
timeout = 5
testpaths = ["custom_components/haeo", "tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = ["--strict-markers", "--strict-config", "--import-mode=importlib", "--benchmark-disable", "--benchmark-group-by=param", "--benchmark-sort=mean"]
filterwarnings = ["error"]
markers = [
    "scenario: marks tests as scenario tests (select with '-m \"scenario\"')",
    "benchmark: marks tests as benchmark tests (select with '-m \"benchmark\"')",
    "guide: marks tests as guide screenshot tests (select with '-m \"guide\"')",
    "enable_socket: marks tests that need real socket access",
]

[tool.coverage.run]
omit = ["**/tests/*"]

[tool.mdformat]
number = true                       # Renumber ordered lists
end_of_line = "lf"
exclude = [".venv", "node_modules"]

[tool.importlinter]
root_packages = ["custom_components.haeo", "tools"]
include_external_packages = true
contract_types = ["allowlist: tools.import_contracts.AllowlistContract"]

[[tool.importlinter.contracts]]
name = "Core is standalone"
type = "allowlist"
source_modules = ["custom_components.haeo.core"]
allow_modules = ["highspy", "numpy", "typing_extensions"]

[[tool.importlinter.contracts]]
name = "Model is standalone"
type = "allowlist"
source_modules = ["custom_components.haeo.core.model"]
allow_modules = ["highspy", "numpy", "typing_extensions"]

[[tool.importlinter.contracts]]
name = "diag CLI only uses core"
type = "allowlist"
source_modules = ["tools.diag"]
allow_modules = ["custom_components.haeo.core", "numpy", "tabulate"]

[[tool.importlinter.contracts]]
name = "snapshot CLI is stdlib only"
type = "allowlist"
source_modules = ["tools.snapshot"]
allow_modules = []

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*", "tools*"]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
